# clinical-ai-data

./: .gitignore  README.md  notebook.ipynb  pyproject.toml
clinical_ai/: data_utils.py
